Edited comments for clarity

--- a/JupyterNotebooks/LeafScans1_MergeAndExplore.ipynb
+++ b/JupyterNotebooks/LeafScans1_MergeAndExplore.ipynb
@@ -95,8 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Summary Stats and Graphs\n",
-    "* filler"
+    "## Create Summary Stats and Graphs"
    ]
   },
   {
@@ -105,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Wavelengths lilst usefule for graphing and looping\n",
+    "# Wavelengths list useful for graphing and looping\n",
     "wavelengths = df_gasex.columns[20:].astype(str)"
    ]
   },
@@ -138,6 +137,7 @@
     }
    ],
    "source": [
+    "# No Sav\n",
     "plt.plot(wavelengths.astype(int), df_nutes_nosav.T)\n",
     "plt.show()"
    ]
@@ -159,19 +159,11 @@
     }
    ],
    "source": [
+    "#Have to zoom in to see changes from sav filter, we see that the 'red' is smoothed a bit\n",
     "plt.plot(wavelengths.astype(int), df_gasex_sav.T, color = 'red')\n",
     "plt.plot(wavelengths.astype(int), df_gasex_nosav.T, color = 'blue')\n",
     "plt.ylim([1.1, 1.15])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_gasex_sav[1].T"
    ]
   },
   {
@@ -191,6 +183,7 @@
     }
    ],
    "source": [
+    "# Make graph of avg spectra in H and L N treatment\n",
     "dfmelt = df_gasex.melt(id_vars=['Plot', 'Name', 'Ntreatment'],\n",
     "                 value_vars=wavelengths, value_name = 'Reflectance', var_name='Wavelength')\n",
     "dfmelt['Wavelength'] = dfmelt['Wavelength'].astype(int)\n",
@@ -258,7 +251,7 @@
    "metadata": {},
    "source": [
     "## Summary stats\n",
-    "* Calc NDVI and PCA components then make corr heatmap of them plus traits for gas ex and then "
+    "* Calc NDVI and PCA components then make corr heatmap of them plus traits for gas ex and then export via clipboard"
    ]
   },
   {
