--- a/JupyterNotebooks/LeafScans2_LinRegression.ipynb
+++ b/JupyterNotebooks/LeafScans2_LinRegression.ipynb
@@ -8,7 +8,7 @@
     "In this notebook:  \n",
     "* Create train-test code loop for lin regression and then apply to other ML in future\n",
     "* Input: targets - Leaf nutrient or leaf Gas exchange parameter, features - ndvi calculated from hyperspectral scan\n",
-    "* Output: Group Kfold CV R2 scores for every target"
+    "* Output: R2 scores from external group in 5-fold CV where groups are informed by Genotype data"
    ]
   },
   {
