--- a/JupyterNotebooks/LeafScans3_ML.ipynb
+++ b/JupyterNotebooks/LeafScans3_ML.ipynb
@@ -12,7 +12,7 @@
     "* For each ML algorithm and for each target data set (leaf nutes or leaf gas exchange data)\n",
     "    * Split into 5 random folds with respect to genotype (avoid data leakage)\n",
     "    * Use grid search and recursive feature elimination (not for svm) to optimize model hyperparams in training set\n",
-    "    * Apply and record R2 on testing set and record score\n"
+    "    * Apply model to external fold and record R2 - 5 scores per target. \n"
    ]
   },
   {
