--- a/JupyterNotebooks/LeafScans4_CNN.ipynb
+++ b/JupyterNotebooks/LeafScans4_CNN.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LeafScans WorkBook 4 - CNN\n",
+    " * Previously adjusted LeafScan code to output 240x240 ndvi heatmaps as tensors for use by CNN. \n",
+    " * Similarly tensor-ized(?) N target values.\n",
+    " * Define Dataset Loader class to read tensors from Test or Train sets\n",
+    " * Define CNN class with parameters chosen from mild tuning (not shown)\n",
+    " * Write train-test loop to record scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
